@@ -24,6 +24,8 @@
 
  * Add basic merge command. (Jelmer Vernooĳ)
 
+ * Update working tree in pull. (Jelmer Vernooĳ, #452)
+
 0.22.8	2025-03-02
 
  * Allow passing in plain strings to ``dulwich.porcelain.tag_create``
